quic: add support for in-kernel QUIC
After installing in-kernel QUIC from:

  https://github.com/lxin/quic/

Start sever:

  # iperf3 -s --pkey /tmp/quic/tests/keys/server-key.pem \
              --cert /tmp/quic/tests/keys/server-cert.pem

Start client:

  # iperf3 -c ::1 --quic

  Connecting to host ::1, port 5201
  [  5] local ::1 port 45561 connected to ::1 port 5201
  [ ID] Interval           Transfer     Bitrate
  [  5]   0.00-1.00   sec   589 MBytes  4.94 Gbits/sec
  [  5]   1.00-2.00   sec   628 MBytes  5.26 Gbits/sec
  [  5]   2.00-3.00   sec   545 MBytes  4.57 Gbits/sec
  [  5]   3.00-4.00   sec   648 MBytes  5.43 Gbits/sec
  [  5]   4.00-5.00   sec   613 MBytes  5.14 Gbits/sec
  [  5]   5.00-6.00   sec   654 MBytes  5.49 Gbits/sec
  [  5]   6.00-7.00   sec   581 MBytes  4.87 Gbits/sec
  [  5]   7.00-8.00   sec   547 MBytes  4.59 Gbits/sec
  [  5]   8.00-9.00   sec   623 MBytes  5.23 Gbits/sec
  [  5]   9.00-10.00  sec   477 MBytes  4.00 Gbits/sec
  - - - - - - - - - - - - - - - - - - - - - - - - -
  [ ID] Interval           Transfer     Bitrate
  [  5]   0.00-10.00  sec  5.77 GBytes  4.95 Gbits/sec   sender
  [  5]   0.00-10.00  sec  5.77 GBytes  4.95 Gbits/sec   receiver

  iperf Done.

Signed-off-by: Xin Long <lucien.xin@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@
 # file for complete information.
 
 # Initialize the autoconf system for the specified tool, version and mailing list
-AC_PREREQ([2.71])
+AC_PREREQ([2.69])
 AC_INIT([iperf],[3.16+],[https://github.com/esnet/iperf],[iperf],[https://software.es.net/iperf/])
 m4_include([config/ax_check_openssl.m4])
 m4_include([config/ax_pthread.m4])
@@ -131,6 +131,28 @@ AC_ARG_WITH([sctp],
     ]
 )
 
+# QUIC.  Allow user to disable QUIC support with --without-quic.
+# Otherwise we try to find whatever support is required.
+try_quic=true
+AC_ARG_WITH([quic],
+    [AS_HELP_STRING([--without-quic],
+        [disable QUIC])],
+    [
+        case "$withval" in
+	y | ye | yes)
+	  ;;
+	n | no)
+	try_quic=false
+	  ;;
+	*)
+	AC_MSG_ERROR([Invalid --with-quic value])
+	  ;;
+	esac
+    ], [
+        try_quic=true
+    ]
+)
+
 AC_CHECK_HEADERS([linux/tcp.h])
 
 # Check for SCTP support
@@ -141,6 +163,21 @@ AC_CHECK_HEADERS([netinet/sctp.h],
 		 AC_SEARCH_LIBS(sctp_bindx, [sctp])
 		 AC_CHECK_TYPES([struct sctp_assoc_value], [], [],
 				[[#include <netinet/sctp.h>]]),
+		 [],
+		 [#ifdef HAVE_SYS_SOCKET_H
+#include <sys/socket.h>
+#endif
+])
+fi
+
+# Check for QUIC support
+if $try_quic; then
+AC_CHECK_HEADERS([sys/socket.h])
+AC_CHECK_HEADERS([netinet/quic.h],
+		 AC_DEFINE([HAVE_QUIC_H], [1], [Have QUIC support.])
+		 AC_SEARCH_LIBS(quic_server_handshake, [quic])
+		 AC_CHECK_TYPES([struct quic_transport_param], [], [],
+				[[#include <netinet/quic.h>]]),
 		 [],
 		 [#ifdef HAVE_SYS_SOCKET_H
 #include <sys/socket.h>
